crates/test-files/fixtures/compile_errors/shadow_builtin_type.fe
type u256 = u8
type String = u256
type Map = u256
type bool = u256

type keccak256 = u8
type block = u8
type msg = u8
type chain = u8
type self = u8